tests/lex-fail/unicode_str_cp.fl.0.exp
Error: unicode_str_cp.fl(1,3): Unicode escape sequence contains invalid code point: 99999999 
"\u99999999"
  ^          
